--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 /* * {
   outline: 1px solid red;
-  overflow-x: hidden;
 } */
+#card {
+background: rgba(33, 37, 41, 0.57);
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(7.8px);
+-webkit-backdrop-filter: blur(7.8px);
+border: 1px solid rgba(33, 37, 41, 0.15);
+}
